--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     </nav>
 
     <main>
-
+      <h1>let's meat</h1>
+      <p>We love sharing good food with great people. We bring over 30 years industry experience and passion to Adare. With a dishes that are carefully designed to bring you a truly satisfying Irish food experience that you are sure to remember. 
+      </p>
+      <a href="http://google.com" target="_blank">Make Reservation</a>
     </main>
 
     <footer>
