--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     </header>
 
     <nav>
-
+      <a href="#">HOME</a>
+      <a href="#">MENU</a>
+      <a href="#">ORDER ONLINE</a>
+      <a href="#">GIFT VOUCHER</a>
+      <a href="#">CATERING</a>
+      <a href="">CONTACT US</a>
     </nav>
 
     <main>
